# Holpaca

./: .dockerignore  .gitignore  Dockerfile  README.md  build.py  docker-compose.yml  singularity.def
.docs/: dependencies.md  run-singularity.md
benchmarks/: requirements.txt  run_all.sh
benchmarks/YCSB-cpp/: .gitignore  CMakeLists.txt
benchmarks/YCSB-cpp/cmake/: YCSB-cpp-config.cmake.in
benchmarks/YCSB-cpp/core/: basic_db.cc  basic_db.h  client.h  core_workload.cc  core_workload.h  counter_generator.h  db.h  db_factory.cc  db_factory.h  db_wrapper.h  measurements.cc  measurements.h  terminator_thread.h  timer.h  trace_replayer.cc  trace_replayer.h  uniform_generator.h  ycsbc.cc
benchmarks/YCSB-cpp/setups/: cachelib-lru.cc  cachelib-lru.h  cachelib-lru2q.cc  cachelib-lru2q.h  cachelib-overhead.cc  cachelib-overhead.h  holpaca-overhead.cc  holpaca-overhead.h  holpaca.cc  holpaca.h  rocksdb.cc  rocksdb.h
benchmarks/experiments/: agent_overhead.py  main.py  motivation_1.py  motivation_2.py  orchestrator_algorithm_latency_breakdown.py  orchestrator_control_interval.py  use_case_1.py  use_case_2.py  use_case_3.py
benchmarks/experiments/utils/: experiment.py  setup.py
benchmarks/plots/: agent_overhead.py  motivation_1.py  motivation_2.py  orchestrator_algorithm_latency_breakdown.py  orchestrator_control_interval.py  use_case_1.py  use_case_2.py  use_case_3.py
benchmarks/twitter_traces/: download.py
benchmarks/with_slurm/: submit_jobs.py
holpaca/: CMakeLists.txt
holpaca/cmake/: holpaca-config.cmake.in
holpaca/control-plane/: CMakeLists.txt  Main.cpp  Orchestrator.cpp  Orchestrator.h  ProxyManager.h
holpaca/control-plane/algorithms/: ControlAlgorithm.h  Motivation.cpp  Motivation.h  Optimizable.h  PerformanceMaximization.cpp  PerformanceMaximization.h
holpaca/data-plane/: CMakeLists.txt  CacheAllocator.cpp  CacheAllocator.h  CacheAllocatorConfig.h
holpaca/protos/: CMakeLists.txt  Holpaca.proto
